[package]
name = "fast-assets"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Easy to use Assets Manager"
tags = ["assets", "zip"]
repository = "https://github.com/eVisualUser/fast-assets"
license = "MIT"

[dependencies]
regex = "1.7.1"
rayon = "1.7.0"

# Files Formats
pro_csv = "0.1.1"

# Compression Formats
zip = "0.6.4"
